# codex-work-badge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/loops/codex-work-badge-build-gate/: README.md  STATE.md  loop.manifest.json
docs/qa/: codex-work-badge-user-stories.csv  pre-push-visual-validation.md
scripts/: browser-action-qa.mjs  codex-badge-dmg-build.mjs  codex-badge-dmg-preflight.mjs  codex-badge-user-story-audit.mjs  privacy-doctor.ts  visual-qa.ts
src/: App.tsx  export-actions-source.test.ts  main.tsx  styles.css  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: aggregation.test.ts  aggregation.ts  badge.test.ts  badge.ts  nodeSources.ts  outcomes.test.ts  outcomes.ts  privacy.test.ts  privacy.ts  qr.test.ts  qr.ts  sample.ts  types.ts
