[package]
name = "codex-work-badge"
version = "0.1.0"
description = "Local Codex work badge generator"
authors = ["Anthony Di Benedetto"]
edition = "2021"

[lib]
name = "codex_work_badge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
